@@ -2,6 +2,7 @@ Release R2108:
 ==============
 - fix: mutable element access must init with default value
 - fix: comments flag was mostly ignored
+- fix: inconsitency related to validbits
 
 Release R2106:
 ==============
